refactor: cleanup some methods